Script Items are persisted globally in settings folder